--- a/calculator.html
+++ b/calculator.html
@@ -1,14 +1,30 @@
 <html>
     <head>
         <title>Calculator</title>
-
     </head>
     
     <body>
+        <style>
+            .numpad {
+                width: 100px;
+                height: 100px;
+                font-size: 32px;
+            }
+
+            .panel {
+                margin-left: 50%;
+                margin-top: 20px;
+                width: 500px;
+            }
+
+            #screen {
+                font-size: 32px;
+            }
+        </style>
         <script> 
-            var opearator = '';
-            var num1, num2;
-            var number = 0;
+            var opearator = ''
+            var num1, num2
+            var number = 0
             function buttonPress(n) {
                 number = document.getElementById("screen").value;
                 number = number + n;
@@ -41,17 +57,20 @@
                 document.getElementById("screen").value = answer;
             }
         </script>
-        <input type="text" id="screen"><br>
-        <button onclick="buttonPress(1)">1</button>
-        <button onclick="buttonPress(2)">2</button>
-        <button onclick="buttonPress(3)">3</button>
-        <button onclick="setOperator('+')">+</button><br>
-        <button onclick="buttonPress(4)">4</button>
-        <button onclick="buttonPress(5)">5</button>
-        <button onclick="buttonPress(6)">6</button><br>
-        <button onclick="buttonPress(7)">7</button>
-        <button onclick="buttonPress(8)">8</button>
-        <button onclick="buttonPress(9)">9</button><br>
-        <button onclick="evaluateExpression()">=</button><br>
+        <div class="panel">
+                <input type="text" id="screen"><br>
+                <button class="numpad" style="width: 100px" onclick="buttonPress(1)">1</button>
+                <button class="numpad" onclick="buttonPress(2)">2</button>
+                <button class="numpad" onclick="buttonPress(3)">3</button>
+                <button class="numpad" onclick="setOperator('+')">+</button><br>
+                <button class="numpad" onclick="buttonPress(4)">4</button>
+                <button class="numpad" onclick="buttonPress(5)">5</button>
+                <button class="numpad" onclick="buttonPress(6)">6</button><br>
+                <button class="numpad" onclick="buttonPress(7)">7</button>
+                <button class="numpad" onclick="buttonPress(8)">8</button>
+                <button class="numpad" onclick="buttonPress(9)">9</button><br>
+                <button class="numpad" onclick="evaluateExpression()">=</button><br>
+        </div>
+
     </body>
 </html>
